# infinite-spaces

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
NonEuclidean/: Camera.cpp  Camera.h  Collider.cpp  Debug.cpp  Debug.h  Engine.cpp  Engine.h  FrameBuffer.cpp  FrameBuffer.h  GameHeader.h  House.h  InfiniteSpace.cpp  InfiniteSpace.h  Input.cpp  Input.h  Main.cpp  Mesh.cpp  Mesh.h  Minimap.cpp  Minimap.h  Object.cpp  Object.h  Physical.cpp  Physical.h  Player.cpp  Player.h  Portal.cpp  Portal.h  Resources.cpp  ScreenBuffer.cpp  ScreenBuffer.h  Shader.cpp  Shader.h  Statue.h  Texture.cpp  Texture.h  Timer.h  Vector.h
NonEuclidean/Meshes/: corridor-c.mtl  u-corridor.mtl
NonEuclidean/Shaders/: color.frag  color.vert  minimap_lines.frag  minimap_lines.vert  minimap_player.frag  minimap_player.vert  minimap_present.frag  minimap_present.vert  pink.frag  portal.frag  present.vert  sky.frag  texture.frag  texture.vert  texture_array.frag
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad_wgl.h
dependencies/glad/src/: glad_wgl.c
